--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,11 @@ services:
 
   kanban-postgres:
     image: "postgres:9.6-alpine"
-    container_name: kanban-postgres
+    container_name: mwt-postgres
     volumes:
       - kanban-data:/var/lib/postgresql/data
     ports:
-      - 5432:5432
+      - "5432:5432"
     environment:
       - POSTGRES_DB=kanban
       - POSTGRES_USER=kanban
@@ -15,23 +15,27 @@ services:
 
   kanban-app:
     build: ./kanban-app
-    container_name: kanban-app
+    container_name: mwt-app
     environment:
       - DB_SERVER=kanban-postgres
       - POSTGRES_DB=kanban
       - POSTGRES_USER=kanban
       - POSTGRES_PASSWORD=kanban
     ports:
-      - 8080:8080
+      - "8080:8080"
     links:
+      - kanban-postgres
+    depends_on:
       - kanban-postgres
 
   kanban-ui:
     build: ./kanban-ui
-    container_name: kanban-ui
+    container_name: mwt-ui
     ports:
-      - 4200:80
+      - "4200:80"
     links:
+      - kanban-app
+    depends_on:
       - kanban-app
 
 
