--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,43 @@
 version: '3'
 services:
 
-  kanban-postgres:
+  postgres:
     image: "postgres:9.6-alpine"
     container_name: mwt-postgres
     volumes:
-      - kanban-data:/var/lib/postgresql/data
+      - data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     environment:
-      - POSTGRES_DB=kanban
-      - POSTGRES_USER=kanban
-      - POSTGRES_PASSWORD=kanban
+      - POSTGRES_DB=db
+      - POSTGRES_USER=username
+      - POSTGRES_PASSWORD=password
 
-  kanban-app:
-    build: ./kanban-app
-    container_name: mwt-app
+  backend:
+    build: backend
+    container_name: mwt-backend
     environment:
-      - DB_SERVER=kanban-postgres
-      - POSTGRES_DB=kanban
-      - POSTGRES_USER=kanban
-      - POSTGRES_PASSWORD=kanban
+      - DB_SERVER=postgres
+      - POSTGRES_DB=db
+      - POSTGRES_USER=username
+      - POSTGRES_PASSWORD=password
     ports:
       - "8080:8080"
     links:
-      - kanban-postgres
+      - postgres
     depends_on:
-      - kanban-postgres
+      - postgres
 
-  kanban-ui:
-    build: ./kanban-ui
-    container_name: mwt-ui
+  frontend:
+    build: frontend
+    container_name: mwt-frontend
     ports:
       - "4200:80"
     links:
-      - kanban-app
+      - backend
     depends_on:
-      - kanban-app
+      - backend
 
 
 volumes:
-  kanban-data:
+  data:
