--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -1,15 +1,15 @@
 server {
     listen 80;
-    server_name kanban-ui;
+    server_name frontend;
     root /usr/share/nginx/html;
     index index.html index.html;
 
     location /api/kanbans {
-        proxy_pass http://kanban-app:8080/api/kanbans;
+        proxy_pass http://backend:8080/api/kanbans;
     }
 
     location /api/tasks {
-        proxy_pass http://kanban-app:8080/api/tasks;
+        proxy_pass http://backend:8080/api/tasks;
     }
 
     location / {
